src/index.css
@font-face {
  font-family: "Agustina Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Agustina Regular"),
    url("./assests/fonts/Agustina.woff") format("woff");
}
@font-face {
  font-family: "Montserrat";
  src: local("Montserrat"),
    url("./assests/fonts/Montserrat-Regular.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Bold";
  src: local("Google Sans Bold"),
    url("./assests/fonts/GoogleSans-Bold.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Bold Italic";
  src: local("Google Sans Bold Italic"),
    url("./assests/fonts/GoogleSans-BoldItalic.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Italic";
  src: local("Google Sans Italic"),
    url("./assests/fonts/GoogleSans-Italic.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Medium";
  src: local("Google Sans Medium"),
    url("./assests/fonts/GoogleSans-Medium.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Medium Italic";
  src: local("Google Sans Medium Italic"),
    url("./assests/fonts/GoogleSans-MediumItalic.ttf") format("woff");
}
@font-face {
  font-family: "Google Sans Regular";
  src: local("Google Sans Regular"),
    url("./assests/fonts/GoogleSans-Regular.ttf") format("woff");
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
html,
body {
  scroll-behavior: smooth;
}
*{
  letter-spacing: 1.04px;
  line-height: 120%;
}
body {
  margin: 0;
  font: 19px / 23px Montserrat, "Montserrat", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
::-webkit-scrollbar {
  width: 11px;
  height: 0px;
}
::-webkit-scrollbar-track {
  background: #292a2d;
}
::-webkit-scrollbar-thumb {
  background: #2962ff;
  border-radius: 0px;
}
::-webkit-scrollbar-thumb:hover {
  background: #2962ff;
}
/* Media Query */
@media (max-width: 1380px) {
  html,
  body {
    font-size: 16px;
    line-height: normal;
  }
}

